physrisk/kustomize/base/routes/physrisk-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: physrisk-api
  labels:
    app: physrisk-api
    app.kubernetes.io/component: physrisk-api
    app.kubernetes.io/name: physrisk-api
    app.kubernetes.io/part-of: physrisk
spec:
  to:
    kind: Service
    name: physrisk-api
  port:
    targetPort: 8081
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
